--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
-name = "boazk_pydantic_collab"
-version = "0.1.2"
+name = "pydantic_collab"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -8,7 +7,18 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic_ai_slim>=1.36.0",
 ]
+dynamic = [
+ "version",
+]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["pydantic_collab"]
+
+[tool.hatch.version]
+path = "pydantic_collab/__init__.py"
 [project.optional-dependencies]
 viz = [
     "graphviz>=0.20.3",
@@ -32,13 +42,6 @@ dev = [
 ]
 [tool.uv]
 package = true
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["pydantic_collab"]
 
 [tool.ruff]
 line-length = 120
