--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,12 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.4
+    rev: v0.13.2
     hooks:
       # Run the linter
       - id: ruff
-        args: [--fix]
+        args: [--fix, --exit-non-zero-on-fix]
       # Run the formatter
       - id: ruff-format
-
   - repo: local
     hooks:
       - id: pytest
