--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic_ai_slim>=1.36.0",
 ]
+[project.urls]
+Homepage = "https://github.com/boazkatzir/pydantic-collab"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
