Update README with badges, add license field to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "pydantic_collab"
 description = "Multi Agent System Framework built on top of Pydantic AI. "
 readme = "README.md"
+license = "MIT"
 requires-python = ">=3.11"
 dynamic = [
  "version",
