--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ lint = ["pyright>=1.1.390", "ruff>=0.6.9"]
 dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=1.3.0",
+    "pytest-cov>=5.0.0",
+    "coverage>=7.0.0",
 ]
 [tool.uv]
 package = true
